modules/networking/main.tf
# Create VPC
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"

  tags = {
    Name        = var.vpc_name
    Terraform   = "true"
    Environment = var.environment
  }
}

# Create internet gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = var.gw_name
    Environment = var.environment
  }
  lifecycle {
    create_before_destroy = true
  }
}

# Create public subnets
resource "aws_subnet" "public" {
  count = length(var.public_subnet_cidr_blocks)

  cidr_block                          = var.public_subnet_cidr_blocks[count.index]
  vpc_id                              = aws_vpc.vpc.id
  map_public_ip_on_launch             = true
  private_dns_hostname_type_on_launch = "ip-name"
  availability_zone                   = element(var.availability_zones, count.index)

  tags = {
    Name        = "${var.public_subnet_name_prefix}-${count.index + 1}"
    Environment = var.environment
  }
}

# Create private subnets
resource "aws_subnet" "private" {
  count = length(var.private_subnet_cidr_blocks)

  cidr_block                          = var.private_subnet_cidr_blocks[count.index]
  private_dns_hostname_type_on_launch = "ip-name"
  vpc_id                              = aws_vpc.vpc.id
  availability_zone                   = element(var.availability_zones, count.index)

  tags = {
    Name        = "${var.private_subnet_name_prefix}-${count.index + 1}"
    Environment = var.environment
  }
}

# Create elastic IP
resource "aws_eip" "nat_eip" {
  # domain = "vpc"

  tags = {
    Name = var.nat_eip_name
  }
}

# Create NAT Gateway
resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public[0].id

  tags = {
    Name = var.nat_gateway_name
  }
}


# Create route table for public subnets
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name        = var.public_rt_name
    Environment = var.environment
  }
}

# Create route table for private subnets
resource "aws_route_table" "private" {
  count  = length(aws_subnet.private)
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name        = "${var.private_rt_name}-${count.index + 1}"
    Environment = var.environment
  }
}

# Associate public subnets with public route table
resource "aws_route_table_association" "public" {
  count          = length(aws_subnet.public)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# Associate private subnets with private route table
resource "aws_route_table_association" "private" {
  count          = length(aws_subnet.private)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}

# Add nat gateway routes to private route tables
resource "aws_route" "nat_gateway_route" {
  count                  = length(aws_subnet.private)
  route_table_id         = aws_route_table.private[count.index].id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
}

# Create security group for nodes
resource "aws_security_group" "sg" {
  name   = var.sg_name
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name        = var.sg_name
    Environment = var.environment
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
